--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  font-family: 'Open Sans', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .App {
   text-align: center;
 }
