--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -5,8 +5,22 @@ nav a.active {
 .NavBar {
     background-color: turquoise;
     color: aliceblue;
+    position: relative;
+    text-align: right;
 }
 
-a:first-child {
-    text-align: left;
+a {
+    display: inline-block;
+    position: relative;
+    padding: 0.5em 0.5em;
+}
+
+section {
+    display: inline-block;
+    margin-right: 1em; 
+}
+
+.NavBar-logo {
+    left: 1em;
+    position: absolute;
 }
