--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,15 +2,52 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+body {
+  min-height: 100vh;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
 
+input {
+  min-width: 300px;
+  padding: 0.5rem;
+  display: block;
+  margin: 1rem auto;
+  border: 1px solid gainsboro;
+  border-radius: 7px;
+  outline: none;
+}
+
+button {
+  display: block;
+  margin: 1rem auto;
+  background-color: turquoise;
+  color: aliceblue;
+  font-size: 1.25rem;
+  min-width: 120px;
+  padding: 0.5rem 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 7px;
+}
+
+section {
+  margin-right: 0!important;
+}
+ 
 .App {
   text-align: center;
 }
 
+
+
+/* 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -39,4 +76,4 @@ a {
   to {
     transform: rotate(360deg);
   }
-}
+} */
