--- a/frontend/src/JobCard.css
+++ b/frontend/src/JobCard.css
@@ -1,7 +1,9 @@
 .JobCard, 
 .JobCard-link {
-  width: 600px;
-  margin: 1.5em auto;
+  min-width: 300px;
+  width: 90%;
+  max-width: 600px;
+  margin: 0.5em auto;
   position: relative;
 }
 
