--- a/frontend/src/components/styles/App.css
+++ b/frontend/src/components/styles/App.css
@@ -2,87 +2,46 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-body {
-  min-height: 100vh;
-  text-align: center;
-}
-
 a {
   text-decoration: none;
-  color: inherit;
+  color          : inherit;
 }
 
 input {
-  min-width: 300px;
-  padding: 0.5rem;
-  display: block;
-  margin: 1rem auto;
-  border: 1px solid gainsboro;
+  min-width    : 300px;
+  padding      : 0.5rem;
+  display      : block;
+  margin       : 1rem auto;
+  border       : 1px solid gainsboro;
   border-radius: 7px;
-  outline: none;
+  outline      : none;
 }
 
 button {
-  display: block;
-  margin: 1rem auto;
+  display         : block;
+  min-width       : 120px;
+  margin          : 1rem auto;
+  padding         : 0.5rem 0.75rem;
   background-color: turquoise;
-  color: aliceblue;
-  font-size: 1.25rem;
-  min-width: 120px;
-  padding: 0.5rem 0.75rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 7px;
-  outline: none;
+  border          : none;
+  border-radius   : 7px;
+  letter-spacing  : 0.1rem;
+  font-size       : 1rem;
+  font-weight     : bold;
+  text-transform  : uppercase;
+  outline         : none;
 }
 
 button:disabled,
-button[disabled]{
+button[disabled] {
   background-color: rgba(161, 218, 213, 0.425);
-  color: white;
-  border: none;
-  outline: none;
-}
-
-section {
-  margin-right: 0!important;
-}
- 
-.App {
-  text-align: center;
+  color           : white;
+  border          : none;
+  outline         : none;
 }
 
 
-
-/* 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.Company-desc {
+  max-width: 480px;
+  margin: 0 auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
