--- a/frontend/src/components/styles/CompanyCard.css
+++ b/frontend/src/components/styles/CompanyCard.css
@@ -1,14 +1,8 @@
-.CompanyCard, 
-.CompanyCard-link {
-  min-width: 300px;
-  width: 90%;
-  max-width: 720px;
-  margin: 0em auto;
-}
-
 .CompanyCard {
+  width: 480px;
+  margin: 1.5rem auto;
   border: solid 1px gainsboro;
-  padding: 1em;
+  padding: 1rem;
   text-align: left;
 }
 
@@ -18,6 +12,11 @@
 
 .CompanyCard-logo {
   float: right;
-  margin: 0.5em;
+  margin-top: 1rem;
+  margin-right: 0.5rem;
+}
+
+.CompanyCard-desc {
+  font-weight: 300;
 }
 
