--- a/frontend/src/components/styles/Home.css
+++ b/frontend/src/components/styles/Home.css
@@ -1,14 +1,37 @@
 .Home {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display        : flex;
+  flex-direction : column;
+  justify-content: center;
+  align-items    : center;
+  height         : calc(100vh - 2.5rem);
 }
+
+.Home-title {
+  font-size: 2.5rem;
+  margin   : 1rem;
+}
+
+.Home-desc {
+  margin-top   : 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.Home-greet {
+  font-size: 1.5rem;
+  margin   : 1rem;
+}
+
 .Home-button {
-    background-color: turquoise;
-    padding: 0.5em 1em;
-    border-radius: 5px;
-    color: aliceblue;
-    font-weight: bold;
+  background-color: rgba(161, 218, 213, 0.425);
+  display         : block;
+  min-width       : 120px;
+  margin          : 1rem auto;
+  padding         : 0.5rem 0.75rem;
+  border          : none;
+  border-radius   : 7px;
+  letter-spacing  : 0.1rem;
+  font-size       : 1rem;
+  font-weight     : bold;
+  text-transform  : uppercase;
+  outline         : none;
 }
