--- a/frontend/src/components/styles/JobCard.css
+++ b/frontend/src/components/styles/JobCard.css
@@ -1,15 +1,13 @@
-.JobCard, 
-.JobCard-link {
+.JobCard {
   min-width: 300px;
-  width: 90%;
-  max-width: 600px;
-  margin: 0.5em auto;
-  position: relative;
+  max-width: 480px;
+  margin   : 1.5rem auto;
+  position : relative;
 }
 
 .JobCard {
-  border: solid 1px gainsboro;
-  padding: 1em;
+  border    : solid 1px gainsboro;
+  padding   : 1rem;
   text-align: left;
 }
 
@@ -19,11 +17,16 @@
 
 .JobCard button {
   position: absolute;
-  margin: 2em;
-  bottom: 1em;
-  right: 0;
+  bottom  : 0.75rem;
+  right   : 1.25rem;
+}
+
+.JobCard button:hover {
+  background: transparent;
+  border    : solid 1px turquoise;
+  box-shadow: 0px 0px 3px turquoise;
 }
 
 .JobCard-text {
-    display: inline-block;
-  }
+  display: inline-block;
+}
